# dBASE

./: CHANGELOG.md  LICENSE  README.md  dBASE.cabal
app/: Cut.hs  FromCSV.hs  Head.hs  Main.hs  ToCSV.hs  Zip.hs
src/: DBase.hs
test/: DBaseGen.hs  Main.hs  Regression.hs
test/regression/inputs/: US_state_1980.dbf  cut.dbf  stf300mi.dbf  stf300pa.dbf  stf300us.dbf  stf301.dbf  stf301pa.dbf  stf301us.dbf  stf302pa.dbf  stf303pa.dbf  stf304pa.dbf  stf308pa.dbf  stf309ar.dbf  stf309pa.dbf  stf310pa.dbf  stf311pa.dbf  stf312pa.dbf  stf313pa.dbf  stf314pa.dbf  stf315pa.dbf  stf316pa.dbf  stf317pa.dbf  stf318pa.dbf  stf319pa.dbf  stf320pa.dbf  stf321pa.dbf  stf322pa.dbf  stf323pa.dbf  stf325pa.dbf  stf328pa.dbf  stf329pa.dbf  stf330pa.dbf  stf331pa.dbf  stf332pa.dbf  stf333pa.dbf  stf333us.dbf  stf334pa.dbf  tables.dbf
test/regression/reference/: US_state_1980.csv  cut.csv  stf1stru..csv  stf300mi.csv  stf300pa.csv  stf300us.csv  stf301.csv  stf301pa.csv  stf301us.csv  stf302pa.csv  stf303pa.csv  stf304pa.csv  stf308pa.csv  stf309ar.csv  stf309pa.csv  stf310pa.csv  stf311pa.csv  stf312pa.csv  stf313pa.csv  stf314pa.csv  stf315pa.csv  stf316pa.csv  stf317pa.csv  stf318pa.csv  stf319pa.csv  stf320pa.csv  stf321pa.csv  stf322pa.csv  stf323pa.csv  stf325pa.csv  stf328pa.csv  stf329pa.csv  stf330pa.csv  stf331pa.csv  stf332pa.csv  stf333pa.csv  stf333us.csv  stf334pa.csv  tables.csv
