cabal-version:      3.0
name:               dBASE
version:            0.1.0.0
synopsis:           Parsing, serialization, and manipulation of dBASE files
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Mario Blažević
maintainer:         blamario@protonmail.com
-- copyright:
category:           Database
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  DBase
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.18.0.0 && < 4.20.0.0 || ^>=4.20.0.0,
                      bytestring >= 0.10 && < 0.13, cereal ^>= 0.5,
                      construct ^>=0.3, incremental-parser ^>= 0.5, input-parsers ^>= 0.3, rank2classes >=1.0 && <1.6,
                      cassava ^>= 0.4 || ^>= 0.5, scientific ^>= 0.3, time >= 1.11 && < 1.15,
                      containers >= 0.1 && < 0.8, vector >= 0.8 && < 0.14
    hs-source-dirs:   src
    default-language: Haskell2010

executable dbf2csv
    import:           warnings
    main-is:          ToCSV.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        optparse-applicative >= 0.15 && < 0.19,
        bytestring, cassava,
        dBASE

    hs-source-dirs:   app
    default-language: Haskell2010

executable csv2dbf
    import:           warnings
    main-is:          FromCSV.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        optparse-applicative >= 0.15 && < 0.19,
        bytestring, cassava, time,
        dBASE

    hs-source-dirs:   app
    default-language: Haskell2010

executable dbfcut
    import:           warnings
    main-is:          Cut.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        optparse-applicative >= 0.15 && < 0.19,
        bytestring, dBASE

    hs-source-dirs:   app
    default-language: Haskell2010

executable dbfzip
    import:           warnings
    main-is:          Zip.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.18.0.0 && <4.20.0.0 || ^>=4.20.0.0,
        optparse-applicative >= 0.15 && < 0.19,
        bytestring, time,
        dBASE

    hs-source-dirs:   app
    default-language: Haskell2010

executable dbfhead
    import:           warnings
    main-is:          Head.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.18.0.0 && <4.20.0.0 || ^>=4.20.0.0,
        optparse-applicative >= 0.15 && < 0.19,
        bytestring,
        dBASE

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite properties
    import:           warnings
    default-language: Haskell2010
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    DBaseGen
    build-depends:
        base,
        bytestring, rank2classes, scientific, time,
        hedgehog ^>= 1.4 || ^>=1.5,
        dBASE

test-suite regression
    import:           warnings
    default-language: Haskell2010
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Regression.hs
    build-depends:    base >= 4.7 && < 5, dBASE,
                      bytestring, text, cassava,
                      directory ^>= 1.3, filepath,
                      tasty >= 0.7, tasty-silver ^>= 3.3
